Added links on index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <a href="image.html">Image</a>
+    <a href="advanced.html">Advanced</a>
     <form class="center" action="https://www.google.com/search">
         <div>
             <input id="writing" type="text" name="q">
