Image search going to correct page

--- a/advanced.html
+++ b/advanced.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    Advanced
+    <div id="links">
+        <div>
+            <a href="index.html">Home</a>
+        </div>
+    </div>
+    <form class="center" action="https://www.google.com/search">
+        <div>
+            <input id="writing" type="text" name="q">
+        </div>
+        <div>
+            <input type="submit" value="Advanced Search">
+        </div>    
+    </form>
 </body>
 </html>
