--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <a href="image.html">Image</a>
-    <a href="advanced.html">Advanced</a>
-    <form class="center" action="https://www.google.com/search">
+    <div id="links">
+        <div>
+            <a href="image.html">Image</a>
+            <a href="advanced.html">Advanced</a>
+        </div>
+    </div>
+    <form class="center" action="https://www.google.com/search?q=q">
         <div>
             <input id="writing" type="text" name="q">
         </div>
